--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -166,7 +166,7 @@
                                 <div>Hop Email</div><div><strong>: {{ row.hop.userEmail }}</strong></div>
                                 <div>Hop Contact</div><div><strong>: {{ row.hop.userContact }}</strong></div>
                                 <div>Hop Department</div><div><strong>: {{ row.hop.userDepartment }}</strong></div>
-                            </div>=
+                            </div>
                         {% endif %}
                     </td>
                 </tr>
