--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -280,7 +280,7 @@
                     </td>
 
                     <!-- Department -->
-                    <td>{{ row.userDepartment if row.userDepartment else '<span style="color:red;">'N/A'</span>' | safe }}</td>
+                    <td>{{ row.userDepartment if row.userDepartment else '<span style="color:red;">N/A</span>' | safe }}</td>
 
                     <!-- Invigilation -->
                     <td>
