--- a/app/templates/admin/adminProfile.html
+++ b/app/templates/admin/adminProfile.html
@@ -28,11 +28,11 @@
             </div>
 
             <div class="form-right">
-                <label>Contact Number (Editable)</label>
+                <label>Contact Number</label>
                 <input type="tel" name="contact" value="{{ admin_contact_text }}"><br>
 
                 <div class="password-container">
-                    <label>Password (Editable)</label> 
+                    <label>Password</label> 
                     <input type="password" name="password1" value="{{ admin_password1_text }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
@@ -40,7 +40,7 @@
                 </div><br>
 
                 <div class="password-container">
-                    <label> Confirm Password (Editable)</label>
+                    <label> Confirm Password</label>
                     <input type="password" name="password2" value="{{ admin_password2_text }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
